# fake-job-postings

./: .gitignore  README.md  pyproject.toml
outputs/2025-06-27/17-05-33/.hydra/: hydra.yaml
outputs/2025-06-27/17-10-33/.hydra/: config.yaml  hydra.yaml
outputs/2025-06-27/17-10-58/.hydra/: config.yaml  hydra.yaml
outputs/2025-06-27/17-11-35/.hydra/: config.yaml  hydra.yaml
outputs/2025-06-27/17-14-45/.hydra/: config.yaml  hydra.yaml
outputs/2025-06-27/17-15-00/.hydra/: config.yaml  hydra.yaml
outputs/2025-06-27/17-15-29/.hydra/: config.yaml  hydra.yaml
outputs/2025-06-27/17-16-35/.hydra/: config.yaml  hydra.yaml
outputs/2025-06-27/17-17-39/.hydra/: config.yaml  hydra.yaml
outputs/2025-06-27/17-18-09/.hydra/: config.yaml  hydra.yaml
src/fake_job_postings/: .env  main.py  model.py
src/fake_job_postings/cfg/: config.yaml
src/fake_job_postings/data/: dataset.py  eda.py  etl.py
src/fake_job_postings/lightning_logs/version_2/: hparams.yaml
tests/: test_dataloader.py  test_etl.py  test_model.py
